Fixed overflow of search results in documentation

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -19,6 +19,9 @@
 .d-nooverflow {
     overflow: hidden;
 }
+.d-overflow {
+    overflow: visible;
+}
 
 #small-nav {
     &>* {
